# Collatz-Sequence-Visualizer

./: README.md
cpp/: CMakeLists.txt  run.sh
cpp/cmake/: CMakeLists.txt
cpp/src/: main.cpp
web/: index.html  package-lock.json  package.json
web/src/: App.tsx
web/src/components/CollatzVisualizer/: Controls.tsx  GraphView.tsx  SpiralView.tsx  index.tsx
web/src/hooks/: useCollatzSequence.ts
web/src/types/: index.ts
